Added AutoLayout controller and added property to AppdDelegate to allow global access to the main nav controller
The AutoLayout controller is for experimenting with autoLayout.

--- a/DevSandbox/DevSandbox.csproj
+++ b/DevSandbox/DevSandbox.csproj
@@ -111,6 +111,7 @@
     <Compile Include="ListEntry.cs" />
     <Compile Include="ListOfViewsController.cs" />
     <Compile Include="TextViewsController.cs" />
+    <Compile Include="AutoLayoutController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
